--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cykura",
     "solana"
   ],
-  "module": "dist/sdk-core.esm.js",
+  "module": "dist/cykura-sdk-core.esm.js",
   "scripts": {
     "build": "tsdx build",
     "start": "tsdx watch",
